<resources>
    <string name="app_name">Shopping Mart</string>
    <string name="title_activity_employee_options_sidebar">EmployeeOptionsSidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shopping Mart</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="authenticate_new_employee">Authenticate New Employee</string>
    <string name="make_new_user">Create New User</string>
    <string name="make_new_account">Create New Account</string>
    <string name="make_new_employee">Create New Employee</string>
    <string name="restock_inventory">Restock Inventory</string>
    <string name="title_activity_employee_options">EmployeeOptionsView</string>
    <string name="make_new_admin">Create New Admin</string>
    <string name="title_activity_admin_options_view">AdminOptionsView</string>
    <string name="title_home">Promotion</string>
    <string name="title_dashboard">View Accounts</string>
    <string name="title_notifications">Sales</string>
    <string name="initialization">INITIALIZATION</string>
    <string name="create_an_admin">Create an Admin</string>
    <string name="create_an_employee">Create An Employee</string>
    <string name="login_page">Login Page</string>
    <string name="login">Login</string>

    <string name="item_heading">Items</string>
    <string name="quantity_heading">Total Quantity</string>
    <string name="total_price_label">   Total: </string>
    <string name="initial_total">$0.00</string>
    <string name="check_out">Check Out</string>
    <string name="save_cart">Save Cart</string>

    <string name="welcome_greeting">Welcome</string>
    <string name="go_shopping_btn">Go Shopping</string>
    <string name="see_cart_btn">See Shopping Cart</string>
    <string name="logout">Logout</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="initial_quantity">0</string>
    <string name="enter_quantity">Quantity</string>
    <string name="go_back_home">Go back to home</string>
    <string name="reset_all">Reset All Quantities</string>
    <string name="option_heading">Options</string>
    <string name="current_quantity_heading">Current Quantity</string>
    <string name="action_serialize">Serialize</string>
    <string name="action_deserialize">Deserialize</string>
    <string name="send_customer_credits">Send Customer Credits</string>

</resources>
