<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_authenticate_new_employee"
            android:icon="@drawable/letter_a"
            android:title="@string/authenticate_new_employee" />
        <item
            android:id="@+id/nav_make_new_user"
            android:icon="@drawable/user"
            android:title="@string/make_new_user" />
        <item
            android:id="@+id/nav_make_new_account"
            android:title="@string/make_new_account" />
        <item
            android:id="@+id/nav_restock_inventory"
            android:icon="@drawable/inventory"
            android:title="@string/restock_inventory" />

    </group>



</menu>
