<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.Application.View.Admin.EmployeesFragmentView"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_admin_employees" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.Application.View.Admin.AccountsFragmentView"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_admin_accounts" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.Application.View.Admin.BooksFragmentView"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_admin_books" />
</navigation>